--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
@@ -73,7 +73,7 @@
                 <li>Python</li>
                 <li>C</li>
                 <li>HTML5 & CSS</li>
-                
+
             </ul>
         </div>
     </section>
