Refactor CSS link in index.html and update file structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="../src/styles.css">
+    <link rel="stylesheet" type="text/css" href="/src/styles.css">
 </head>
 <body>
     <header>
@@ -44,21 +44,21 @@
                         <h3>Quackathon 2024 Project</h3>
                         <p>Pommodoro timer made for Dundee Quackathon 2024</p>
                         <a href="https://github.com/SamWatt5/Quackathon2024">
-                            <img src="../img/github-mark.png" class="github-logo">
+                            <img src="/img/github-mark.png" class="github-logo">
                         </a>
                     </div>
                     <div class="project">
                         <h3>Project 2</h3>
                         <p>Description of Project 2</p>
                         <a href="https://github.com/SamWatt5/">
-                            <img src="../img/github-mark.png" class="github-logo">
+                            <img src="/img/github-mark.png" class="github-logo">
                         </a>
                     </div>
                     <div class="project">
                         <h3>Project 3</h3>
                         <p>Description of Project 3</p>
                         <a href="https://github.com/SamWatt5/">
-                            <img src="../img/github-mark.png" class="github-logo">
+                            <img src="/img/github-mark.png" class="github-logo">
                         </a>                    
                     </div>
             </div>
@@ -83,14 +83,14 @@
             <h2>Contact Me</h2>
             <div>
                 <a href="mailto:sam.watts005@gmail.com" target="_blank">
-                    <img src="../img/email-mark.png" class="contact-images">
+                    <img src="/img/email-mark.png" class="contact-images">
                     <span>sam.watts005@gmail.com</span>
                 </a>
             </div>
             
             <div>
                 <a href="https://github.com/SamWatt5" target="_blank">
-                    <img src="../img/github-mark.png" class="contact-images">
+                    <img src="/img/github-mark.png" class="contact-images">
                     <span>SamWatt5</span>
                 </a> 
             </div>
@@ -104,7 +104,7 @@
 
             <div>
                 <a href="https://discordapp.com/users/366276517866504203" target="_blank">
-                    <img src="../img/discord-mark.png" class="contact-images">
+                    <img src="/img/discord-mark.png" class="contact-images">
                     <span>Samzdabeast4880</span>
                 </a>    
             </div>
@@ -119,6 +119,6 @@
         </div>
     </footer>
 
-    <script src="../src/scripts.js"></script>
+    <script src="/src/scripts.js"></script>
 </body>
 </html>
