Refactor CSS link in index.html and add CV section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#CV">CV</a></li>
         </ul>
     </nav>
 
@@ -107,9 +108,13 @@
                     <img src="/img/discord-mark.png" class="contact-images">
                     <span>Samzdabeast4880</span>
                 </a>    
-            </div>
-                
-            
+            </div>  
+        </div>
+    </section>
+
+    <section id="CV" class="section">
+        <div class="container">
+            <p>My CV is available <a href="/src/SamWattsCV.pdf">here</a></p>
         </div>
     </section>
 
