--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <section id="CV" class="section">
         <div class="container">
-            <p>My CV is available <a href="/src/SamWattsCV.pdf">here</a></p>
+            <p>My CV is available <a href="/src/SamWattsCV.pdf" target="_blank">here</a></p>
         </div>
     </section>
 
