Refactor CV content and update job title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <h1>Sam Watts</h1>
-            <p>Full-Stack Developer</p>
+            <p>Software Developer</p>
         </div>
     </header>
 
@@ -28,7 +28,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                Hi, I'm Sam Watts, a passionate full-stack developer with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
+                Hi, I'm Sam Watts, a passionate software developer with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, C, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
                 <br><br>
                 With a strong foundation in software engineering and hands-on experience from projects like the Pomodoro timer I developed for the Dundee Quackathon 2024, I lead my teams using agile methodologies to deliver efficient, high-quality solutions. I thrive in collaborative environments, continuously learning and adapting to new challenges.
                 <br><br>
