Refactor LinkedIn link in index.html to use updated custom icon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             
             <div>
                 <a href="https://www.linkedin.com/in/samwatt5/" target="_blank">
-                    <img src="/img/li-mark.png" class="contact-images">
+                    <img src="/img/LI-mark.png" class="contact-images">
                     <span>linkedin.com/in/samwatt5</span>
                 </a> 
             </div>  
