Refactor about me section in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
 
     <section id="about" class="section">
         <div class="container">
-            <img src="https://placehold.co/200" id="about-me-img">
-            <div class="about-me-text">
-                <h2>About Me</h2>
-                <p>
-                    Hi, I'm Sam Watts, a passionate software developer with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, C, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
-                    <br><br>
-                    With a strong foundation in software engineering and hands-on experience from projects like the Pomodoro timer I developed for the Dundee Quackathon 2024, I lead my teams using agile methodologies to deliver efficient, high-quality solutions. I thrive in collaborative environments, continuously learning and adapting to new challenges.
-                    <br><br>
-                    Whether it's frontend design, backend development, or project management, I'm always excited to work on innovative projects that push the boundaries of what technology can do.
-                </p>
+            <h2>About Me</h2>
+            <div class="about-me">
+                <img src="https://placehold.co/200" id="about-me-img">
+                    <div class="about-me-text">
+                    <p>
+                        Hi, I'm Sam Watts, a passionate software developer with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, C, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
+                        <br><br>
+                        With a strong foundation in software engineering and hands-on experience from projects like the Pomodoro timer I developed for the Dundee Quackathon 2024, I lead my teams using agile methodologies to deliver efficient, high-quality solutions. I thrive in collaborative environments, continuously learning and adapting to new challenges.
+                        <br><br>
+                        Whether it's frontend design, backend development, or project management, I'm always excited to work on innovative projects that push the boundaries of what technology can do.
+                    </p>
+                </div>
             </div>
+            
             
         </div>
     </section>
