Refactor about me section in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-me">
-                <img src="https://placehold.co/200" id="about-me-img">
+                <img src="/img/me.jpg" id="about-me-img">
                     <div class="about-me-text">
                     <p>
                         Hi, I'm Sam Watts, a passionate software developer with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, C, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
