Refactor projects grid and project styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="/img/me.jpg" id="about-me-img">
                     <div class="about-me-text">
                     <p>
-                        Hi, I'm Sam Watts, a passionate software developer with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, C, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
+                        Hi, I'm Sam Watts, a second year student at the University of Dundee with a knack for solving complex problems and building dynamic, user-friendly applications. I specialize in Java, Python, C, and web technologies like HTML5 & CSS, bringing both the technical and creative aspects of development to life.
                         <br><br>
                         With a strong foundation in software engineering and hands-on experience from projects like the Pomodoro timer I developed for the Dundee Quackathon 2024, I lead my teams using agile methodologies to deliver efficient, high-quality solutions. I thrive in collaborative environments, continuously learning and adapting to new challenges.
                         <br><br>
@@ -63,15 +63,19 @@
             <h2>Projects</h2>
             <div class="projects-grid">
                     <div class="project">
+                        <img src="/img/pomodoro-project.png" class="project-picture">
                         <h3>Quackathon 2024 Project</h3>
+                        <h4>Java, GitHub, Swing</h4>
                         <p>Pommodoro timer made for Dundee Quackathon 2024</p>
                         <a href="https://github.com/SamWatt5/Quackathon2024">
                             <img src="/img/github-mark.png" class="github-logo">
                         </a>
                     </div>
                     <div class="project">
-                        <h3>Project 2</h3>
-                        <p>Description of Project 2</p>
+                        <img src="/img/message-project.png" class="project-picture">
+                        <h3>Messaging application GUI</h3>
+                        <h4>Java, GitHub, Swing</h4>
+                        <p>Front-end for a messaging application, made in Java with Swing.</p>
                         <a href="https://github.com/SamWatt5/">
                             <img src="/img/github-mark.png" class="github-logo">
                         </a>
