--- a/index.html
+++ b/index.html
@@ -62,43 +62,42 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="projects-grid">
-                    <div class="project">
-                        <img src="/img/pomodoro-project.png" class="project-picture">
-                        <h3>Quackathon 2024 Project</h3>
-                        <h4>Java, GitHub, Swing</h4>
-                        <p>Pomodoro timer made for Dundee Quackathon 2024</p>
-                        <a href="https://github.com/SamWatt5/Quackathon2024" target="_blank">
-                            <img src="/img/github-mark.png" class="github-logo">
-                        </a>
-                    </div>
-                    <div class="project">
-                        <img src="/img/message-project.png" class="project-picture">
-                        <h3>Messaging application GUI</h3>
-                        <h4>Java, GitHub, Swing</h4>
-                        <p>Front-end for a messaging application, made in Java with Swing.</p>
-                        <a href="https://github.com/SamWatt5/DataStructuresProjectGroup4" target="_blank">
-                            <img src="/img/github-mark.png" class="github-logo">
-                        </a>
-                    </div>
-                    <div class="project">
-                        <img src="https://fakeimg.pl/350x200/?text=Project 3" class="project-picture">
-                        <h3>Project 3</h3>
-                        <h4>Tools used</h4>
-                        <p>Description of Project 3</p>
-                        <a href="https://github.com/SamWatt5/" target="_blank">
-                            <img src="/img/github-mark.png" class="github-logo">
-                        </a>                    
-                    </div>
-                    <div class="project">
-                        <img src="https://fakeimg.pl/350x200/?text=Project 4" class="project-picture">
-                        <h3>Project 4</h3>
-                        <h4>Tools used</h4>
-                        <p>Description of Project 4</p>
-                        <a href="https://github.com/SamWatt5/" target="_blank">
-                            <img src="/img/github-mark.png" class="github-logo">
-                        </a>                    
-                    </div>
+                <div class="project">
+                    <img src="/img/pomodoro-project.png" class="project-picture">
+                    <h3>Quackathon 2024 Project</h3>
+                    <h4>Java, GitHub, Swing</h4>
+                    <p>Pomodoro timer made for Dundee Quackathon 2024</p>
+                    <a href="https://github.com/SamWatt5/Quackathon2024" target="_blank">
+                        <img src="/img/github-mark.png" class="github-logo">
+                    </a>
+                </div>
+                <div class="project">
+                    <img src="/img/message-project.png" class="project-picture">
+                    <h3>Messaging application GUI</h3>
+                    <h4>Java, GitHub, Swing</h4>
+                    <p>Front-end for a messaging application, made in Java with Swing.</p>
+                    <a href="https://github.com/SamWatt5/DataStructuresProjectGroup4" target="_blank">
+                        <img src="/img/github-mark.png" class="github-logo">
+                    </a>
+                </div>
+                <div class="project">
+                    <img src="https://fakeimg.pl/350x200/?text=Project 3" class="project-picture">
+                    <h3>Project 3</h3>
+                    <h4>Tools used</h4>
+                    <p>Description of Project 3</p>
+                    <a href="https://github.com/SamWatt5/" target="_blank">
+                        <img src="/img/github-mark.png" class="github-logo">
+                    </a>                    
+                </div>
             </div>
+            <div class="project-section">
+                <a href="/src/projects.html">
+                    <button class="project-button">
+                        Learn more about my projects here!
+                    </button>
+                </a>
+            </div>
+                
         </div>
     </section>
 
